cabal-version: 1.12

name:           server-example
version:        0.1.0.0
description:    An example of using the Pusher-Platform-Haskell bindings in a server
author:         Samuel A Yallop
maintainer:
copyright:      2020 Samuel
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/syallop/Pusher-Platform-Haskell/Examples/server-example

executable Server-Example
  main-is: Server-Example.hs
  other-modules:
  hs-source-dirs:
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , pusher-platform-haskell
    , text
    , time
    , aeson
    , containers
    , bytestring
    , scientific
    , random-strings
  default-language: Haskell2010

